<resources>
    <string name="bottom_home_title">Home</string>
    <string name="bottom_catalog_title">Catalog</string>
    <string name="bottom_cart_title">Cart</string>
    <string name="bottom_favorite_title">Favorite</string>
    <string name="bottom_account_title">Account</string>
    <string name="profile">Profile</string>
    <string name="promotion">Promotion</string>
    <string name="filter">Filter</string>
    <string name="checkout">Checkout</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="product_information">Product Information</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="chat">Chat</string>
    <string name="all">All</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>

    <string name="error_message_network">Network error</string>
    <string name="error_message_call">Call failed</string>
    <string name="error_message_map">Map loading failed</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="product">Product</string>
    <string name="share_to">Share to</string>
    <string name="version_unknown">version unknown</string>
    <string name="apply_changes">Apply changes</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>